--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -104,30 +104,25 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 1px solid #E7E7E7;
 }
 
-.totalList > div {
-  padding:5px;
-  margin:5px;
-
-}
-
 #dailyTotals {
   font-size: 32px;
+  text-align:center;
 }
 
 .dailyTotals {
+  margin-right:10px;
   font-size:24px;
   text-align:center;
-  margin-left:20px;
 }
 
 #netCarbsLabel{
   font-size:24px;
   text-align:center;
-  margin-left: 5px;
+
 }
 
 #netCarbs {
-  margin-left 5px;
+
   font-size:32px;
   text-align:center;
 }
