history object built with date and entries, working on totals

--- a/server/public/views/templates/history.html
+++ b/server/public/views/templates/history.html
@@ -4,6 +4,6 @@
     <h1>Welcome, {{hc.userObject.userName}}!</h1>
 </div>
 
-<div ng-repeat="day in hc.mealHistory"class="">
+<!-- <div ng-repeat="day in hc.mealHistory"class="">
   {{day[0].date | date}}
-</div>
+</div> -->
