removed addedFromFavorites property from meal entries

--- a/server/public/views/partials/addFromCommon.html
+++ b/server/public/views/partials/addFromCommon.html
@@ -32,7 +32,7 @@
 
       <md-button class="md-raised md-primary" type="button" name="button" ng-click="cancel()">Cancel</md-button>
 
-      <md-button class="md-raised md-primary" type="button" name="button" ng-click="addEntry(apiFoodObject, false)">Add</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="addEntry(apiFoodObject)">Add</md-button>
 
     </md-dialog-actions>
   </form>
