--- a/server/public/views/templates/meals.html
+++ b/server/public/views/templates/meals.html
@@ -268,7 +268,7 @@
       <md-menu>
         <md-button class="md-raised md-primary" ng-click="mc.openMenu($mdMenu, $event, item)">OPTIONS</md-button>
         <md-menu-content width="4">
-          <md-menu-item  ng-if="!mc.menuItem.addedFromFavorites">
+          <md-menu-item>
             <md-button ng-click="mc.saveToFavorites(item)">
               Add to Favorites
             </md-button>
