--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,7 +1,7 @@
 <div class="navbar" layout="row" ng-controller="UserController as uc">
 
   <div class="">
-    <h2>Fit-Tracker</h2>
+    <h2>Meal-Tracker</h2>
   </div>
 
 
@@ -9,11 +9,11 @@
 
     <div>
       <ul>
-        <li><a href="#/user">User Home</a></li>
-        <li><a href="#/meals">MealTracking</a></li>
+        <!-- <li><a href="#/user">User Home</a></li> -->
+        <li><a href="#/meals">Meal Tracking</a></li>
         <li><a href="#/history">History</a></li>
-        <li><a href="#/goals">Goals</a></li>
-        <li><a href="#/testing">TESTING</a></li>
+        <!-- <li><a href="#/goals">Goals</a></li> -->
+        <!-- <li><a href="#/testing">TESTING</a></li> -->
       </ul>
     </div>
 
