--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -2,7 +2,7 @@
 
 
   <div class="loginBox">
-    <h1>Fit-Tracker</h1>
+    <h1>Meal-Tracker</h1>
       <form ng-submit="lc.login()">
         <div>
           <label for="username">Username:</label>
