--- a/server/public/views/templates/meals.html
+++ b/server/public/views/templates/meals.html
@@ -233,7 +233,7 @@
         </div>
       </div>
       <md-menu>
-        <md-button class="md-raised md-primary" ng-click="mc.openMenu($mdMenu, $event, item)">OPTIONS</md-button>
+        <md-button class="md-raised md-primary" ng-click="mc.entryOptionsMenu($mdMenu, $event, item)">OPTIONS</md-button>
         <md-menu-content width="4">
           <md-menu-item>
             <md-button ng-click="mc.saveToFavorites(item)">
