--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -1,7 +1,7 @@
 <div class="home">
 
 <div class="loginBox">
-  <h1>Fit-Tracker</h1>
+  <h1>Meal-Tracker</h1>
   <h2 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
   <form ng-submit="lc.registerUser()">
     <div>
