--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -18,6 +18,8 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     width: 100%;
     height: 100%;
+    background-image:url('board-bg.jpeg');
+    background-size:cover;
 }
 
 .loginBox {
