--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,239 +1,327 @@
-/* * {border: 1px dotted black} */
-body, html {
-  font-family:  'Open Sans', sans-serif;
-  /* font-family: 'Roboto', sans-serif; */
-  /* background-image:url('board-bg.jpeg');
-  background-size:cover;
-  background-attachment: fixed; */
-  /* background-color: #F8F8F8; */
+* {
+  margin: 0;
+  padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  /* font-family: 'Roboto', sans-serif; */
-  font-family:  'Open Sans', sans-serif;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Open Sans", "Roboto", Arial, Helvetica, sans-serif;
+  color: #006f46;
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
+.carbsGood {
+  color: green;
+}
+.carbsBad {
+  color: red;
+}
+
+.container p {
+  margin-top: 14px;
+}
+
+.dailyTotals {
+  margin-right: 10px;
+  font-size: 2.4rem;
+  text-align: center;
+}
+
+.favorites h3 {
+  text-align: center;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.favoritesCol {
+  flex: 1 0 20%;
+  flex-direction: column;
+  border-right: 1px solid grey;
+  min-height: 80vh;
+  padding: 0.5rem;
+  align-items: center;
+  text-align: center;
+}
+
+.favoritesCol * {
+  margin: 1rem;
+}
+
+.favoritesCol h1 {
+  margin: 0;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.favMeal {
+  color: white;
+  border: 1px solid black;
+  position: relative;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 0.3rem;
+  background-color: #00a266;
+}
+
+.favMeal:hover {
+  background-color: #006f46;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px);
+}
+
+.favMeal:active {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(2px);
+}
+
+.favsDialogContent {
+  text-align: center;
+  font-weight: 600;
+  min-width: 500px;
+}
+
+.favsDialogContent div {
+  margin: 2px;
+}
+
+.home {
+  font-size: 6rem;
+  width: 100%;
+  padding: 0.5rem;
 }
 
 .home > div {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-image:url('board-bg.jpeg');
-    background-size:cover;
+  width: 50%;
+  text-align: center;
+  margin: auto;
+  margin-top: 10%;
+}
+
+.itemBarCarbs {
+  background-color: #f0ab00;
+  height: 20px;
+}
+
+.itemBarFat {
+  background-color: #b3217c;
+  height: 20px;
+}
+
+.itemBarGraph {
+  width: 100px;
+  border: 1px solid #e7e7e7;
+}
+
+.itemBarProtein {
+  background-color: #1aa6b7;
+  height: 20px;
 }
 
 .loginBox {
-  min-width: 800px;
-  min-height: 300px;
-  text-shadow: 2px 2px #D5C4A7;
-  color:#319F52;
-  text-align:center;
+  min-width: 80rem;
+  min-height: 30rem;
+  text-shadow: 2px 2px #d5c4a7;
+  color: #005838;
+  text-align: center;
   font-weight: 600;
 }
 
 .loginBox > h1 {
-  font-size: 84px;
+  font-size: 8.4rem;
   margin-bottom: 15px;
 }
 
 .loginBox form {
-  font-size:20px;
-  font-weight:600;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .loginBox a {
-  color:#319F52;
+  color: #005838;
 }
 
-.container p {
-  margin-top : 14px;
+.main {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  min-height: 100vh;
+  max-height: 100vh;
+  background-image: url("./board-bg.jpg");
+  background-size: cover;
+}
+
+.md-toolbar-tools {
+  font-size: 2.8rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mealsContainer {
+  font-size: 1.5rem;
+  display: flex;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: white;
+  box-shadow: 0.5rem 1rem 5rem #363636;
+  width: 100%;
+}
+
+.mealsHead {
+  border-bottom: 1px solid black;
+  text-align: center;
+  padding: 0 20px 10px 20px;
+  height: 60px;
+}
+
+.mealsHead h1 {
+  margin: 10px;
+}
+
+.mealsMain {
+  flex-grow: 1;
+  display: flex;
+  padding: 5rem;
+  margin: auto;
+  width: 90%;
+}
+
+.mealsTodayCol {
+  padding: 5px;
 }
 
 .navbar {
   width: 100%;
-  border-bottom: 1px solid #E7E7E7;
+  /* margin: 0; */
+  background-color: #006f46;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* align-items: center; */
+  align-items: stretch;
+  min-height: 5rem;
+  /* padding: 0.3rem 1rem; */
+  border-bottom: 0.2rem solid #00a266;
+  box-shadow: 0 0.1rem 3rem #363636;
 }
 
-.navbar h2 {
-  margin-left:15px;
-  margin-right:25px;
-  font-size:30px;
+.navbar span {
+  font-size: 2.5rem;
+  color: white;
+  align-self: center;
+  padding: 0 1rem;
 }
 
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.navContainer {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
 }
 
-.navbar li {
-  float: left;
-}
-
-.navbar li a {
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
+.navLinkItem {
   text-decoration: none;
+  padding: 0 1rem;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
-.navbar li a:hover {
-  text-decoration: underline;
+.navLinkItem,
+.navLinkItem:visited,
+.navLinkItem:active {
+  text-decoration: none;
+  color: #eee;
 }
 
-
-.mealsCol {
-  border-right: 1px solid #E7E7E7;
-}
-
-.mealsHead {
-  border-bottom: 1px solid #E7E7E7;
-  text-align: center;
-  padding-bottom: 10px;
-  margin-top:-10px;
-}
-
-.mealsCol input{
-  max-width: 40%;
-}
-
-.todayList > div{
-  padding:5px;
-}
-
-.totalList {
-  border-bottom: 1px solid #E7E7E7;
-}
-
-#dailyTotals {
-  font-size: 32px;
-  text-align:center;
-}
-
-.dailyTotals {
-  margin-right:10px;
-  font-size:24px;
-  text-align:center;
-}
-
-#netCarbsLabel{
-  font-size:24px;
-  text-align:center;
-
-}
-
-#netCarbs {
-
-  font-size:32px;
-  text-align:center;
-}
-
-.carbsGood {
-  color:green;
-}
-.carbsBad {
-  color:red;
+.navLinkItem:hover {
+  background-color: #55c57a;
 }
 
 .newEntryDialog {
-  padding:20px;
+  padding: 20px;
 }
 
-.newEntryDialog div{
-  margin:2px;
+.popup {
+  font-size: 1.7rem;
 }
 
-.itemBarGraph{
-  width:100px;
-  border: 1px solid #E7E7E7;
+.newEntryDialog div {
+  margin: 2px;
 }
 
-.itemBarFat{
-  background-color: #B3217C;
-  height:20px;
+.todayList > div {
+  padding: 5px;
+}
+.todayListServings {
+  text-align: right;
+}
+.totalList {
+  border-bottom: 1px solid black;
 }
 
-.itemBarProtein{
-  background-color: #1AA6B7;
-  height:20px
+#dailyTotals {
+  font-size: 3.2rem;
+  text-align: center;
 }
 
-.itemBarCarbs{
-  background-color: #F0AB00;
-  height:20px
+#netCarbsLabel {
+  font-size: 2.4rem;
+  text-align: center;
 }
 
-.favorites h3{
-  text-align:center;
-  border-bottom: 1px solid #E7E7E7;
-
+#netCarbs {
+  font-size: 3.2rem;
+  text-align: center;
 }
-
-.favMeal {
-  border: 1px solid #E7E7E7;
-  margin:2px;
-  padding:4px;
-  border-radius: 5px;
-  background-color:lightblue;
-  cursor:pointer;
-}
-
-.favsDialogContent {
-  text-align:center;
-  font-weight:600;
-  min-width:500px;
-}
-
-.favsDialogContent div{
-  margin:2px;
-}
-
-.todayListServings{
-  text-align:right;
-}
-
-.md-toolbar-tools{
-  font-size: 28px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
 
 /* BEGIN API SEARCH DROPDOWN */
 .dropdown {
-    position: relative;
-    min-width:400px;
+  position: relative;
+  min-width: 400px;
 }
 
 .dropdown-content {
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    width:100%
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  width: 100%;
 }
 
- /* TESTING */
+/* TESTING */
 /* .dropdown-content div{
     border: 1px dotted black;
 } */
 
-.dropdown-content img{
-    max-width: 35px;
-    max-height: 40px;
-    margin: 5px;
+.dropdown-content img {
+  max-width: 35px;
+  max-height: 40px;
+  margin: 5px;
 }
 
 .dropdown-content h6 {
-    border-bottom: 1px solid #E7E7E7;
-    margin:5px;
-    padding:5px;
+  border-bottom: 1px solid #e7e7e7;
+  margin: 5px;
+  padding: 5px;
 }
 .dropdown-item {
-  border-bottom:1px solid grey;
-  height:45px;
-  padding:3px;
+  border-bottom: 1px solid grey;
+  height: 45px;
+  padding: 3px;
 }
 
 .dropdown-item:hover {
@@ -242,28 +330,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .common-item {
-  font-size: 18px;
-
+  font-size: 1.8rem;
 }
 
 .branded-item {
-  font-size: 12px;
-
+  font-size: 1.2rem;
 }
 
-#apiSearchBox{
-  width:100%;
-  border: 1px solid #E7E7E7;
-  border-radius:3px;
-  height:30px;
+#apiSearchBox {
+  width: 100%;
+  border: 1px solid #e7e7e7;
+  border-radius: 3px;
+  height: 30px;
 }
 
 /* END API SEARCH DROPDOWN */
-
-.mealsHead h1{
- margin:10px;
-}
-
-.mealsTodayCol {
-  padding:10px;
-}
