--- a/server/public/views/partials/addFromAPI.html
+++ b/server/public/views/partials/addFromAPI.html
@@ -6,7 +6,7 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content class="favsDialogContent">
+    <md-dialog-content class="favsDialogContent popup">
 
       <div>Serving size: {{apiFoodObject.servingSize}}</div>
       <div>
