--- a/server/public/views/partials/editEntry.html
+++ b/server/public/views/partials/editEntry.html
@@ -7,7 +7,7 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content class="newEntryDialog">
+    <md-dialog-content class="newEntryDialog popup">
 
         <div>Name: <input type="text" ng-model="entryToEdit.name"></div>
         <div>Serving size: <input type="text" ng-model="entryToEdit.servingSize"></div>
