--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,25 +1,13 @@
-<div class="navbar" layout="row" ng-controller="UserController as uc">
-
-  <div class="">
-    <h2>Meal-Tracker</h2>
+<div class="navbar" ng-controller="UserController as uc">
+  <span>Meal-Tracker</span>
+  <div flex></div>
+  <div class="navContainer">
+      <!-- <li><a href="#/user">User Home</a></li> -->
+      <a class="navLinkItem" href="#/meals">Meal Tracking</a>
+      <a class="navLinkItem" href="#/history">History</a>
+      <!-- <li><a href="#/goals">Goals</a></li> -->
+      <!-- <li><a href="#/testing">TESTING</a></li> -->
+      <a class="navLinkItem" ng-click="uc.userService.logout()">Log Out</a>
   </div>
 
-
-
-
-    <div>
-      <ul>
-        <!-- <li><a href="#/user">User Home</a></li> -->
-        <li><a href="#/meals">Meal Tracking</a></li>
-        <li><a href="#/history">History</a></li>
-        <!-- <li><a href="#/goals">Goals</a></li> -->
-        <!-- <li><a href="#/testing">TESTING</a></li> -->
-      </ul>
-    </div>
-
-
-    <div flex></div>
-    <div>
-      <md-button class="md-raised"ng-click="uc.userService.logout()">Log Out</md-button>
-    </div>
 </div>
